deleted row 1-3, added row 1-9,

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-test 
-k
-ny rad 
+</DOCTYPE html>
+<html lang="sv">
+	<head>
+		<meta charset="UTF-8">
+		<title>sidans titel</title>
+		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+<body>
