--- a/portfolioindex.html
+++ b/portfolioindex.html
@@ -81,7 +81,7 @@
 	    <h1>Start Up For Start Up's</h1>
 	<h2>Start your start up here</h2>	
 
-	<a href="www.linkedin.com"><img class="social" src="../bilder/linkedin.png"></a>
+	<a href="www.linkedin.com"><img class="social" src="../bilder/linkedin.PNG"></a>
 	<a href="www.linkedin.com"><img class="social" src="../bilder/fb.png"></a>
 	<a href="www.linkedin.com"><img class="social" src="../bilder/insta.png"></a>
 
